#26: Add avatar and single photo picker logic

--- a/android/modules/ui-kit/src/main/res/values/strings.xml
+++ b/android/modules/ui-kit/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="back">Назад</string>
+    <string name="avatar">Аватар</string>
+    <string name="avatar_edit">Сменить аватар</string>
 </resources>
