--- a/android/modules/features/pet/src/main/res/values/strings.xml
+++ b/android/modules/features/pet/src/main/res/values/strings.xml
@@ -3,6 +3,24 @@
     <string name="title_create">Новая анкета</string>
     <string name="title_edit">Редактирование анкеты</string>
 
+    <string name="edit_avatar">Изменить</string>
+    <string name="delete_avatar">Удалить</string>
+
+    <string name="button_save">Сохранить</string>
+    <string name="button_hide">Скрыть</string>
+    <string name="button_show">Сделать видимым</string>
+    <string name="button_add">Добавить</string>
+    <string name="zero_price">По договоренности</string>
+
+    <string name="add_fields_title">Добавить поля</string>
+    <string name="add_fields_subtitle">Добавить поля</string>
+
+    <string name="level_champion">Победитель</string>
+    <string name="level_winner">Призер</string>
+    <string name="level_participant">Участник</string>
+
+    <string name="select_date">Выберите дату</string>
+
     <string name="button_edit">Изменить</string>
     <string name="button_chat">Написать</string>
 
