--- a/android/modules/ui-kit/src/main/res/values/strings.xml
+++ b/android/modules/ui-kit/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="back">Назад</string>
     <string name="avatar">Аватар</string>
     <string name="avatar_edit">Сменить аватар</string>
+    <string name="select_date_title">Выберите дату</string>
+    <string name="save">Сохранить</string>
+    <string name="cancel">Отмена</string>
 
     <string name="logo_desc">Логотип</string>
 </resources>
