--- a/android/modules/features/profile/src/main/res/values/strings.xml
+++ b/android/modules/features/profile/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="profile_edit">Редактировать</string>
     <string name="profile_logout">Выйти</string>
+    <string name="add">Добавить</string>
 </resources>
