--- a/android/modules/features/profile/src/main/res/values/strings.xml
+++ b/android/modules/features/profile/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="profile_edit">Редактировать</string>
     <string name="profile_logout">Выйти</string>
     <string name="add">Добавить</string>
+    <string name="my_pets">Мои питомцы</string>
+    <string name="favourites">Мне нравится</string>
+    <string name="pets">Питомцы</string>
 </resources>
