#65: add empty placeholder

--- a/android/modules/features/pet-list/src/main/res/values/strings.xml
+++ b/android/modules/features/pet-list/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="zero_price">По договоренности</string>
     <string name="reload">Попробовать снова</string>
+    <string name="empty_list">К сожалению, список пуст</string>
 </resources>
