#65: add error placeholders

--- a/android/modules/ui-kit/src/main/res/values/strings.xml
+++ b/android/modules/ui-kit/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="cancel">Отмена</string>
 
     <string name="logo_desc">Логотип</string>
+    <string name="loading_error">Не удалось загрузить</string>
+    <string name="reload">Попробовать снова</string>
 </resources>
