--- a/android/modules/features/pet/src/main/res/values/strings.xml
+++ b/android/modules/features/pet/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="zero_price">По договоренности</string>
 
     <string name="add_fields_title">Добавить поля</string>
-    <string name="add_fields_subtitle">Добавить поля</string>
+    <string name="add_fields_subtitle">Отметьте нужные поля</string>
 
     <string name="level_champion">Победитель</string>
     <string name="level_winner">Призер</string>
